2017-01-10  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-586

	* src/m_rt4.cc:

	Fix build if RT4 is disabled by adding the new argument also to dummy
	RT4Calc function.

2017-01-10 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-585

	* src/rt4.cc,h (sca_optpropCalc):
	Modified test for scattering matrix normalization (consistently with
	scat_dataCheck use albedo deviation). Throw more helpful error message.

	* src/m_rt4.cc, methods.cc (RT4Calc):
	Made above mentioned albedo deviation treshold user definable parameter.

2017-01-05  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-584

	* src/m_rte.cc (iyIndependentBeamApproximation): Added some more
	control variables for filling of *atm_fields_compact*.

2017-01-05  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-583

	* src/m_montecarlo.cc (MCGeneral): Added chack that sensor_pos/los
	in fact just have one row (before additional rows were silently
	ignored).

	* src/m_rte.cc (iyIndependentBeamApproximation): 1D now handled
	exactly as 2D and 3D. Added another GIN option.

	* src/workspace.cc: Polishing of description of iy_id.

	* src/rte.cc (apply_iy_unit, apply_iy_unit2): Inside these
	functions the name y_unit was still used.

2017-01-04  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-582

	* src/rte.cc (get_iy_of_background): Had commited with a cout.

2017-01-04  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-581

	* A basic implementation of iy_id now in place.

	* controlfiles/general/general.arts: iy_id set to 0.

	* src/m_radiation_field.cc (radiation_fieldCalcFromiyCalc):
	* src/m_fos.cc (iyFOS, fos):
	* src/m_surface.cc (iySurfaceCallSubAgendaX, iySurfaceFastem)
	(iySurfaceRtpropAgenda, iySurfaceRtpropCalc):
	* src/rte.cc (get_iy_of_background):
	* src/m_rte.cc (iyEmissionStandard,iyCalc):
	* src/m_cloudradar.cc (yCloudRadar): Changes related to iy_id.

	* src/agendas.cc (define_agenda_data): Added iy_id as input to