@@ -1,32 +1,0 @@
-/* Copyright (C) 2012
-   Oliver Lemke <olemke@core-dump.info>
-
-   This program is free software; you can redistribute it and/or modify it
-   under the terms of the GNU General Public License as published by the
-   Free Software Foundation; either version 2, or (at your option) any
-   later version.
-
-   This program is distributed in the hope that it will be useful,
-   but WITHOUT ANY WARRANTY; without even the implied warranty of
-   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-   GNU General Public License for more details.
-
-   You should have received a copy of the GNU General Public License
-   along with this program; if not, write to the Free Software
-   Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307,
-   USA. */
- 
-#ifndef config_global_h
-#define config_global_h
-
-#if HAVE_CONFIG_H
-// This header is generated by the configure script.
-#include <config.h>
-#elif HAVE_CONFIG_XCODE_H  // OLE: Only here for experimenting with Xcode
-#include "config_xcode.h"
-#else
-#error "Please run ./configure in the top arts directory before compiling."
-#endif
-
-#endif /* config_global_h */
-
