@@ -36,7 +36,7 @@
 
 //----------< First of all, include the configuration header >----------
 // This header is generated by the configure script.
-#include "config_global.h"
+#include "config.h"
 
 #define PACKAGE_VERSION ""
 
