@@ -30,7 +30,7 @@
   === External declarations
   ===========================================================================*/
 
-#include "config_global.h"
+#include "config.h"
 
 #ifdef ENABLE_RT4
 
